index.css
:root {
    --project-opacity: 1;
    --secondary-color: #2b7192; /* #8d8d8d */
    --background-color: #d5e6ff; /* #f0f0f0 */
}

body, html {
    margin: 0;
    padding: 0;
    font-family: 'Arial', sans-serif;

    background: var(--background-color);
}

.unselectable {
    user-select: none;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
}

.external-link {
    font-weight: bold;
    font-style: italic;
    display: inline-flex;
    align-items: center;
}
.external-link::after {
    content: "";

    width: 1em;
    height: 0.9em;
    margin-right: 0.1em;
    margin-left: 0.2em;
}
.external-link.github::after {
    background: url("./icons/GitHub_Invertocat_White.svg") no-repeat center / contain;

    filter: brightness(0);
    -webkit-filter: brightness(0);
}
.external-link.linkedin::after {
    background: url("./icons/LinkedIn_icon.svg") no-repeat center / contain;
}

#headerSection {
    text-align: justify;
    padding: 20px;
}


#filter-container {
    display: flex;
    justify-content: center;
    margin: 20px 0;
}

.multiselect {
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;

    justify-items: center;

    width: 100%;
}

.selectBox {
    grid-row: 1;
    position: relative;
    width: 100px;

    display: flex;
    align-items: center;
    justify-content: center;
}

.selectBox > svg {
    margin-right: 5px;
    font-weight: bold;
}

.selectBox > svg > circle {
    transition: cx 0.3s ease;
}

.selectBox:hover {
    cursor: pointer;
    font-size: 18px;
}

.selectBox:active {
    font-size: 16px;
}

.selectBox:hover > svg > circle:nth-child(4n + 2) {
    cx: 15;
}

.selectBox:hover > svg > circle:nth-child(4) {
    cx: 5;
}

.selectBox span {
    font-weight: bold;
}

.overSelect {
    position: absolute;
    left: 0;
    right: 0;
    top: 0;
    bottom: 0;
}

#filter-box {
    grid-row: 2;

    display: grid;
    grid-template-columns: 1;
    grid-template-rows: 24px auto;

    align-items: center;
    justify-content: center;

    row-gap: 5px;

    width: 40%;
    min-width: 300px;
    margin: 0;

    overflow: hidden;

    interpolate-size: allow-keywords;
    transition: height 0.3s ease, padding 0.3s ease;
}

#filter-box.hidden {
    height: 0;
    padding: 0;
}

#filter-box > p {
    margin: 0;
    padding: 0;
    font-size: 12px;
    margin: 1px;
    font-weight: bold;

    transition: transform 0.3s ease;
}

#filter-box > p > span {
    font-size: 10px;
}

#filters {
    grid-row: 2;

    display: flex;
    width: calc(100% - 10px);
    padding: 0;

    transition: height 0.3s ease, padding 0.3s ease;
}


#filters > span {
    transition: transform 0.3s ease;
}

#filter-box.hidden > #filters > span {
    height: 0px;
    transform: translate(0, -300px);
}

#filter-box.hidden > p {
    transform: translate(0, -300px);
}

#timeline-container {
    display: grid;
    grid-template-columns: 6em auto;
    grid-template-rows: auto;

    margin-left: 10px;
}

#timeline {
    grid-column: 1;
    display: grid;
    grid-template-columns: 100%;
    grid-template-rows: auto;

    margin-left: 10px;
    margin-right: 10px;
    height: 100%;
    min-height: 100vh;
    position: relative;
    padding-top: 20px;
    column-gap: 20px;

    interpolate-size: allow-keywords;
    transition: grid-template-columns 0.2s ease;

    overflow: hidden;
}

#timeline > .timeline-element {
    font-size: 1em;
    font-family: 'Courier New', Courier, monospace;
    font-weight: bold;
}

#timeline > div.timeline-element {
    grid-column: 1;
    display: grid;
    align-items: last baseline;
    justify-content: center;
    padding-left: 3px;

    grid-template-columns: 100%;
    grid-template-rows: 100%;
}

#timeline > div.timeline-element > span {
    position: sticky;
    /*align-content: bottom;*/

    bottom: 0px;
}

#timeline > div.month-bar {
    position: absolute;
    grid-column: 1;

    justify-content: center;

    width: 11px;
    background-color: var(--secondary-color);
    height: calc(100% - 10px);
    padding-left: 0;
    border-radius: 6px;

    bottom: 0.2lh;
    left: 3px;
}

#timeline > div.month-bar::after {
    content: "";
    position: sticky;
    width: 100%;
    aspect-ratio: 1;
    background-color: var(--background-color);
    border-radius: 100%;
    border: 5px solid var(--secondary-color);

    bottom: 0;
    margin-bottom: -0.25em;

    justify-self: center;
}

#timeline > .month-cell {
    min-height: 50px;
}
#timeline > div.timeline-element > span.month, #timeline > div.timeline-element > span.static {
    transform: translate(2ch);
}
#timeline > div.timeline-element > span.static {
    position: relative;
    opacity: 0.7;
    bottom: 1lh;
}
#timeline > div.timeline-element > span.year {
    transform: translateX(9ch);
}
#timeline > div.timeline-element > span.decade {
    transform: translateX(6ch);
}

/*
#timeline > div > .current {
    font-size: 10px;
    color: #ff0000;
}
*/

#project-container {
    display: flex;
    flex-wrap: nowrap;
    justify-content: flex-start;
    gap: 20px;
    padding: 20px;
}

.project-timeline {
    height: 100%;
    width: 100%;

    display: grid;
    grid-template-columns: 100%;
}

.project {
    /*background-color: #ffffff;*/
    background: radial-gradient(circle 200px at var(--mouse-x, 50%) var(--mouse-y, 50%), #ffffff, #fafafa);
    border-radius: 8px;
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
    width: calc(100% - 20px);
    padding: 10px;
    margin-bottom: 10px;

    text-align: center;

    justify-items: center;

    position: relative;

    opacity: 0;

    transform: translateX(-100px);

    interpolate-size: allow-keywords;
    transition: box-shadow 0.3s ease, opacity 0.3s ease, transform 0.3s ease, height 0.1s linear, width 0.1s linear, justify-self 0.1s linear;
}

.project.in-view {
    transform: translateX(0);
    opacity: var(--project-opacity, 1);
}

.project > .tags {
    width: 90%;
}

.project > p {
    margin: 10px 20px;
    font-size: 14px;
    color: #151515;
}

.project.in-view:hover {
    cursor: pointer;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
    /*
    opacity: 1;
    height: var(--project-max-height, auto);
    */
}
.project.in-view.project-focused {
    opacity: 1;
    height: var(--project-max-height, auto);
    width: 70vw;
    min-width: 600px;
    justify-self: center;
}

#buffer {
    position: relative;
    height: 0px;

    animation-duration: 0.3s;
    animation-timing-function: ease;
}
#buffer.buffer-active {
    height: 100vh;
    animation-name: bufferAnimation;
}

@keyframes bufferAnimation {
    0% {
        height: 100vh;
    }
    100% {
        height: 0px;
    }
}

.tags > span.ignore, #key.tags > span.ignore {
    text-decoration: line-through;
    
    /*
    filter: gray;
    -webkit-filter: grayscale(1);
    filter: grayscale(1);
    */
    color: white;
    background-color: gray;
    background: gray;
    animation: none;
    opacity: 0.5;
    text-decoration-color: rgba(255, 30, 30, 0.5);
    text-decoration-thickness: 2px;
    font-style: italic;
}

.tags > .exclusive {
    font-weight: 700;
    text-decoration: underline;
    text-decoration-thickness: 4px;
}

.tags {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    align-items: center;

    gap: 10px;
    margin-top: 10px;
}

#key.tags > span {
    /*background: linear-gradient(to right, #ff0000, #00ff00, #0000ff);*/
    /*background: linear-gradient(to right, red, orange, yellow, green, blue, indigo);*/
    background: linear-gradient(to right, darkred, rgb(117, 117, 0), darkblue, darkmagenta);
    /*background-color: rgb(50, 50, 50);*/
}

.tags > span {
    background-color: darkgray;
    color: white;
    padding: 5px 10px;
    border-radius: 4px;
    font-size: 12px;
}

.tags > .js {
    background-color: #f0db4f;
    color: black;
}
.tags > .python {
    background-color: #306998;
    color: white;
}
.tags > .react {
    background-color: #61dafb;
    color: black;
}
.tags > .html {
    background-color: #e33926;
    color: white;
}
.tags > .css {
    background-color: #264de4;
    color: white;
}
.tags > .php {
    background-color: #777bb4;
    color: white;
}
.tags > .lua {
    background-color: #000080;
    color: white;
}

.tags > .game-design {
    background-color: #ff6347;
    color: white;
}
.tags > .ui {
    background-color: #20b2aa;
    color: white;
}
.tags > .front-end {
    background-color: #ff69b4;
    color: white;
}
.tags > .open-source {
    background-color: #228b22;
    color: white;
}
.tags > .interactive-demo {
    background-color: #8a2be2;
    color: white;
}
.tags > .video-demo {
    background-color: #ff4500;
    color: white;
}

.tags > span:hover {
    opacity: 0.8;
    cursor: pointer;

    padding: 6px 11px;
}

.tags > span:active {
    padding: 5px 10px;
}

